--- a/PoofVapes/Views/Home/Index.cshtml
+++ b/PoofVapes/Views/Home/Index.cshtml
@@ -1,11 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Welcome to Poof";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>The Shop</h1>
+    <h3>The feeling of glamour and fun where this alternative of smoking takes you from the present to the future.  The great gatsby era was a time of new ideas with bad things like prohibition and unthinkable wars.  There were hidden gems that sold illegal things at the time, but here we have something that is viewed bad or stupid by society.</h3>
+    <p>We cater to vapers alike and to new comers that want something different to release from the clutches of smoking the traditional tobacco cigarettes.  Poof will provide their own favors of e-liquids as well as other brands of e-liquids. Their inventory of devices expands from rebuildables of all sorts and types to non-rebuildables tanks and even to automatic batteries and carto.</p>
+    <p>We know there is a lot of questions, come in and get answers.</p>
+    <h1>The Lounge</h1>
+    <p class="lead">Come and enjoy the Poof's experience; play pool, shoot darts, play games on our consoles, surf the Internet, or just chill.  Vape at a bar or lounge at a table or couches. Vape our own line of e-liquids or the selection of brands. We'll give a taster or 2, but we encourage you to purchase samplers - start from $0.50 to $5.00. Use your own device or we'll provide 2 options: 0 mg prefilled clearomizers or eGo One mini.  The 0 mg prefilled clearomizers are the taster versions, we will provide the battery as well.  If you choose the eGo Mini One option, you rent the device. We'll store your unique eGo Mini One and make sure it is fully charged and have a new coil when you come in and use it.</p>
+    <p>We have an unique, but fun way to view our line of mods and devices.</p>
+    <p><a href="@Url.Action("About", "Home")" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
@@ -19,12 +24,12 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
+        <h2>Questions?</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>Shop and Lounge</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
